<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/dp_600"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/face_title"
            style="@style/DialogTitle"
            android:text="@string/Face_Title"
            android:textColor="@color/cornflowerblue" />

        <ImageView
            android:id="@+id/iv_close"
            style="@style/DialogClose"
            android:layout_alignEnd="@id/face_title"
            android:contentDescription="@null" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="@android:color/darker_gray" />

    <RelativeLayout style="@style/FaceRecordingDialog">

        <EditText
            android:id="@+id/et_face_image_path"
            style="@style/TextBox"
            android:layout_alignBottom="@id/btn_add_face"
            android:layout_toStartOf="@id/btn_choose_picture"
            android:hint="@string/Input_Path"
            android:importantForAutofill="no"
            android:textColorHint="@color/darkorange" />

        <Button
            android:id="@+id/btn_choose_picture"
            style="@style/DialogButton"
            android:layout_toStartOf="@id/btn_add_face"
            android:text="@string/Choose_Pictures"
            android:textColor="@color/darkgreen" />

        <Button
            android:id="@+id/btn_add_face"
            style="@style/DialogButton"
            android:layout_alignParentEnd="true"
            android:text="@string/Add_Face"
            android:textColor="@color/darkslateblue" />

    </RelativeLayout>

    <RelativeLayout style="@style/FaceRecordingDialog">

        <EditText
            android:id="@+id/et_face_token"
            style="@style/TextBox"
            android:layout_alignBottom="@id/btn_delete_face"
            android:layout_toStartOf="@id/btn_delete_face"
            android:hint="@string/Face_Token"
            android:importantForAutofill="no"
            android:textColorHint="@color/coral" />

        <Button
            android:id="@+id/btn_delete_face"
            style="@style/DialogButton"
            android:layout_toStartOf="@id/btn_show_face_image"
            android:text="@string/Delete_Pictures"
            android:textColor="@color/royalblue" />

        <Button
            android:id="@+id/btn_show_face_image"
            style="@style/DialogButton"
            android:layout_alignParentEnd="true"
            android:text="@string/Show_Pictures"
            android:textColor="@color/saddlebrown" />

    </RelativeLayout>

    <RelativeLayout style="@style/FaceRecordingDialog">

        <EditText
            android:id="@+id/et_group_name"
            style="@style/TextBox"
            android:layout_alignBottom="@id/btn_bind_group"
            android:layout_toStartOf="@id/btn_bind_group"
            android:hint="@string/Bind_GroupName"
            android:importantForAutofill="no"
            android:textColorHint="@color/chocolate" />

        <Button
            android:id="@+id/btn_bind_group"
            style="@style/DialogButton"
            android:layout_toStartOf="@id/btn_get_group_info"
            android:text="@string/Bind"
            android:textColor="@color/darkgoldenrod" />

        <Button
            android:id="@+id/btn_get_group_info"
            style="@style/DialogButton"
            android:layout_alignParentEnd="true"
            android:text="@string/Get_Pictures"
            android:textColor="@color/darkorchid" />

    </RelativeLayout>

    <ListView
        android:id="@+id/lv_group_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/dp_300"
        android:visibility="invisible" />

</LinearLayout>